public/styles/site.css
@import url('https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&family=Quintessential&display=swap');

:root {
   --color-primary: #FFD333;
   --color-accent: #70D6FF;
   --color-warning: #FF70A6;
   --color-success: #00fcc5;
   --color-text: #0A0F0D;
   --color-gray: #DBDBDB;
   --color-white: #FFFFFF;
   --font-primary: 'Halant', serif;
   --font-emphasis: 'Quintessential', cursive;
}

* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
}

body {
   font-family: var(--font-primary);
   font-size: 1.2rem;
   color: var(--color-text);
   background-color: var(--color-text);
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
}

h1, h2, h3, h4, h5, h6 {
   font-family: var(--font-emphasis);
   font-weight: 400;
}

a {
   color: var(--color-accent);
   text-decoration: none;
}

a:hover {
   color: var(--color-primary);
}

a:active {
   color: var(--color-primary);
}

a:visited {
   color: var(--color-primary);
}

a:focus {
   color: var(--color-primary);
}

/* Header */
.header {
   background-color: var(--color-primary);
   display: flex;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   justify-content: space-between;
   align-items: center;
   padding: 0 2rem;
   box-shadow: 0px 20px 10px rgba(0, 0, 0, 0.3);
   height: 5rem;
   z-index: 100;
}

.header-logo {
   height: 100%;
   font-size: 2rem;
   font-weight: 700;
   color: var(--color-text);
   font-family: var(--font-emphasis);
   letter-spacing: 0px;
   flex: 1;
   padding: 1rem 0;
}

.navbar {
   display: none;
   justify-content: center;
   align-items: center;
   height: 100%;
}

.navbar-item {
   display: flex;
   height: 100%;
   transition: .3s;
   align-items: center;
   justify-content: center;
}

.navbar-item:hover {
   background-color: var(--color-accent);
   box-shadow: 0px 5px 100px var(--color-accent);
}

.navbar-item a {
   padding: 1rem;
   text-decoration: none;
   color: var(--color-text);
   font-size: 1.2rem;
   font-weight: 500;
}

.navbar-item a:active {
   color: var(--color-primary);
}

.navbar-item a:visited {
   color: var(--color-text);
}

.navbar-item a:focus {
   color: var(--color-text);
}

.navbar-item a:hover {
   color: var(--color-primary);
}

/* Hero */
.hero {
	position: relative;
	width: 100vw;
	height: 100vh;
	display: flex;
	justify-content: center;
	align-items: center;
	border-bottom: #f0d547;
}

.hero::before {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
	background: url(../images/showcase01.jpg);
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center center;
	filter: brightness(40%);
}

.hero-content {
	position: relative;
}

.hero-content {
	position: relative;
	text-align: center;
}

.hero-title {
	font-size: 3rem;
	font-weight: 600;
   color: var(--color-primary);
}

.hero-subtitle {
	font-size: 2rem;
	font-weight: 200;
   color: var(--color-white);
   padding-bottom: 2rem;
}

/* Conatainer */
.container {
   background-color: var(--color-gray);
   margin: 0 auto;
   padding: 0 2rem;
   flex-grow: 1;
} 

/* Main */
main {
   padding: 2rem;
}


/* Project Cards */
.project-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   padding: 2rem;
   width: 100%;
}

.project-card-holder {
   position: relative;
   width: 18rem;
   height: 25rem;
   margin: 1rem;
   padding-top: 2rem;
   margin-bottom: 3rem;
}

.project-card-holder:hover .project-card {
   transform: rotateY(180deg);
}

.project-card-image {
   position: absolute;
   width: 100%;
   border-radius: 1.5rem 1.5rem 0 0;
   height: 14rem;
   z-index: 1;
   animation: reverse-image .5s ease-in-out;
   animation-fill-mode: forwards;
   overflow: hidden;
}

.project-card-holder:hover .project-card-image {
   animation: move-image .5s ease-out;
   animation-fill-mode: forwards;
}

@keyframes reverse-image {
   0% {
      width: 9rem;
      height: 9rem;
      top: -2rem;
      left: 25%;
      border-radius: 1rem;
      box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2);
   }
   50% {
      top: -1rem;
      left: 12%;
      width: 110%;
      height: 15rem;
      box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
      border-radius: 0;
   }
   100% {
      width: 100%;
      height: 14rem;
      top: 0;
      left: 0;
   }
}

@keyframes move-image {
   0% {
      width: 100%;
      height: 14rem;
      top: 0;
      left: 0;
   }
   25% {
      top: -1rem;
      left: 12%;
      width: 110%;
      height: 15rem;
      box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
      border-radius: 0;
   }
   100% {
      width: 9rem;
      height: 9rem;
      top: -2rem;
      left: 25%;
      border-radius: 1rem;
      box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2);
   }   
}

.project-card-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
}

.project-card {
   position: absolute;
   width: 100%;
   height: 100%;
   transform-style: preserve-3d;
   transition: all 0.5s ease-in-out;
   border-radius: 1.5rem;
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.3);
}

.card-front {
   position: absolute;
   width: 100%;
   height: 100%;
   background-color: var(--color-primary);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   backface-visibility: hidden;
   transform: rotateY(0deg);
   border-radius: 1.5rem;
   padding-top: 50%;
}

.tapForMore {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1rem;
   font-family: var(--font-emphasis);
   padding-bottom: 1rem;
}
/* ... */

